--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,14 +9,13 @@
         .links
           %ul.flex.items-center.list-reset
             %li.m-4
-              .inline-flex
-              %button.bg-grey-light.hover:bg-grey.text-grey-darkest.font-bold.py-2.px-4.rounded-l
-                = link_to 'Sign Up', new_user_registration_path
+              %button.bg-grey-light.hover:bg-grey.text-grey-darkest.font-bold.py-2.px-2.mx-4.rounded-l
+                = link_to 'Sign Up', new_user_registration_path  
               %button.bg-grey-light.hover:bg-grey.text-grey-darkest.font-bold.py-2.px-4.rounded-r
                 = link_to 'Login', new_user_session_path
               %button.bg-blue.hover:bg-blue-dark.text-white.font-bold.py-2.px-4.rounded-full
                 = link_to 'Login with Facebook', user_facebook_omniauth_authorize_path
-
-    = form_with url: search_recipes_path, method: :post, local: true do |form|
-      = form.text_field :search, placeholder: 'Search'
-      = form.submit 'Search'
+    
+      -# = form_with url: search_recipes_path, method: :post, local: true do |form|
+      -#   = form.text_field :search, placeholder: 'Search'
+      -#   = form.submit 'Search'
