--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -62,6 +62,7 @@
    }
 
    .navbar {
+      @apply .flex .flex-row-reverse .items-center .justify-between .mx-auto .px-4 .py-6;
       grid-area: header;
       background: #1995AD;
       color: #BCBABE;
@@ -96,3 +97,15 @@
       text-align: center;
       }
    }
+
+  .mybutton {
+    @apply .bg-grey-light .text-grey-darkest .font-bold .py-2 .px-2 .mx-2 .rounded-full
+  }
+
+  .mybutton:hover {
+    @apply .bg-grey-dark;
+  }
+
+  .links {
+    @apply .items-center .list-reset .m-4;
+  }
